--- a/style.css
+++ b/style.css
@@ -86,6 +86,9 @@ body {
     align-items: center;
 
 }
+.navbar__s4{
+    display: none;
+}
 
 .mylearning{
 
@@ -161,10 +164,9 @@ body {
     left: 10%;
     animation-name: zoom;
     animation-duration: 5s;
-    
     opacity: 0;
-    animation-fill-mode: forwards;
-
+   animation-iteration-count: infinite;
+   animation-fill-mode: forwards;
 
 
 }
@@ -198,8 +200,9 @@ opacity: 1;
 }
 
 .course-cards {
-
-    width: 20%;
+  flex-grow: 1;
+    width: 22%;
+    margin: 5px;
 }
 
 .course-cards img {
@@ -283,4 +286,37 @@ opacity: 1;
     align-items: center;
     display: flex;
     justify-content: space-between;
+}
+
+@media screen and (max-width:800px) {
+    body{
+        font-size: 10px;
+    }
+
+  
+}
+
+
+@media screen and (max-width:500px) {
+    .course-cards{
+        width: 35%;
+        
+}
+.navbar__s2{
+    width: 200px;
+}
+.categories{
+    display: none;
+}
+.navbar__s2 ,.navbar__s3{
+    display: none;
+}
+
+.navbar__s4{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
 }
